# TradingPlatform

./: .gitignore  BYBIT_PER_SYMBOL_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  EXCHANGE_ORDERBOOK_PATTERNS_AND_PLAN.md  FIXES_APPLIED.md  HOW_TO_CHECK_ORDERBOOK_DATA.md  MIGRATION_PATTERN.md  MIGRATION_STATUS.md  ORDERBOOK_IMPLEMENTATION_STATUS.md  ORDERBOOK_REVIEW_RESULTS.md  ORDERBOOK_TEST_PLAN.md  PHASE3_SUMMARY.md  QUICK_TEST.md  README.md  README_MULTICAST_TESTING.md  RECEIVER_SIDE_STATUS.md  TESTING_GUIDE.md  feeder_structure_option.md  local_orderbook_builder.md  local_orderbook_builder_plan.md  test_sender_init.rs  timestamp_price_quantity.md
.claude/: settings.local.json
bins/: live-trading-main.rs
config/consumer/: symbols.json
config/feeder/: README.md
config/feeder/crypto/: binance_config.json  binance_config_full.json  bithumb_config.json  bithumb_config_full.json  bybit_config.json  bybit_config_full.json  coinbase_config.json  coinbase_config_full.json  crypto_exchanges.json  crypto_precision.json  deribit_config.json  deribit_config_full.json  okx_config.json  okx_config_full.json  symbol_mapping.json  symbol_mapping_original.json  upbit_config.json  upbit_config_full.json
config/feeder/stock/: k100_stock_full.json  k100_stock_sample.json  ls_config.json
config/feeder/stock/ls_sec/: future_symbols.json  spot_symbols.json
crates/backtesting/: Cargo.toml
crates/backtesting/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/feature-engineering/: Cargo.toml
crates/feature-engineering/src/: calculator.rs  history.rs  lib.rs  pipeline.rs
crates/feeder/: Cargo.toml
crates/feeder/src/: credentials.json  error.rs  feeder_config.rs  lib.rs  load_config.rs  load_config_ls.rs  secure_keys.rs
crates/feeder/src/connect_to_databse/: data_router.rs  feeder_logger.rs  kdbplus.rs  log_writer.rs  mod.rs  questdb.rs  questdb_log_layer.rs  udp_receiver.rs
crates/feeder/src/connect_to_databse/schema/: questdb_feeder_schema.sql
crates/feeder/src/core/: asset_precision.rs  binary_udp_packet.rs  binary_udp_sender.rs  buffered_udp_sender.rs  connection_manager.rs  connection_stats.rs  enhanced_packet.rs  fast_json.rs  feeder_metrics.rs  file_logger.rs  hft_integration.rs  logging.rs  market_cache.rs  market_data.rs  mod.rs  multi_address_udp_sender.rs  multi_port_udp_receiver.rs  multi_port_udp_sender.rs  network_utils.rs  optimized_udp_sender.rs  order_manager.rs  order_traits.rs  order_types.rs  orderbook_config.rs  orderbook_manager.rs  ordered_udp_sender.rs  packet_validator.rs  robust_connection.rs  safe_logging.rs  spawning.rs  symbol_mapper_cache.rs  terminal_monitor.rs  timestamp_filter.rs  timestamp_normalizer.rs  traits.rs  types.rs  udp_sender.rs  unified_exchange_manager.rs
crates/feeder/src/crypto/: mod.rs
crates/feeder/src/crypto/feed/: binance.rs  binance_backup.rs  binance_optimized.rs  binance_orderbook.rs  binance_rest.rs  binance_snapshot.rs  binance_with_builder.rs  bithumb.rs  bybit.rs  bybit_orderbook_builder.rs  coinbase.rs  coinbase_old.rs  coinbase_orderbook_builder.rs  deribit.rs  deribit_old.rs  deribit_orderbook_builder.rs  mod.rs  okx.rs  okx_old.rs  upbit.rs  websocket_config.rs
crates/feeder/src/crypto/order/: binance_order.rs  binance_order_status.rs  binance_risk_managers.rs  binance_ws_order.rs  binance_ws_order_status.rs  mod.rs
crates/feeder/src/crypto/rest/: binance.rs  bithumb.rs  bybit.rs  coinbase.rs  deribit.rs  mod.rs  okx.rs  upbit.rs
crates/feeder/src/eda/: market_maker.rs  mod.rs  spread.rs
crates/feeder/src/oms/: binance_order_status.rs
crates/feeder/src/stock/: mod.rs  types.rs
crates/feeder/src/stock/feed/: ls_enhanced.rs  ls_rest.rs  ls_ws.rs  mod.rs
crates/feeder/src/stock/feed/sample guide/: comprehensive_derivatives_example.py  derivatives_transaction_codes.py  ls_derivatives_system.py  ls_usage_example.py  setup_script.py
crates/feeder/src/storage/: file.rs  mod.rs
crates/historical-loader/: Cargo.toml
crates/historical-loader/src/: lib.rs
crates/market-types/: Cargo.toml
crates/market-types/src/: exchange.rs  features.rs  lib.rs  order_event.rs  orderbook.rs  packet.rs  sequence.rs  signal.rs  trade.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/examples/: binance_live.rs  binance_orderbook.rs
crates/matching-engine/src/: checksum.rs  hft_orderbook.rs  lib.rs  monitoring.rs  multicast_receiver.rs  orderbook_builder.rs  persistence.rs  types.rs  windows_opt.rs
crates/matching-engine/src/data_ingestion/: data_validator.rs  historical_loader.rs  mod.rs  udp_receiver.rs
crates/matching-engine/src/engine/: mod.rs
crates/matching-engine/src/feature_engineering/: flow.rs  imbalance.rs  mod.rs  wap.rs
crates/matching-engine/src/nbbo/: mod.rs
crates/matching-engine/src/oms/: mod.rs
crates/oms/: Cargo.toml
crates/oms/src/: lib.rs
crates/signal-generation/: Cargo.toml
crates/signal-generation/src/: lib.rs
crates/udp-protocol/: Cargo.toml
crates/udp-protocol/src/: codec.rs  database_receiver.rs  lib.rs  receiver.rs  sender.rs
docs/: current_hft_status.md  exchange_orderbook_patterns.md  hft_firm_comparison_and_improvements.md  hft_firm_comparison_details.md  hft_optimizations_oms_execution.md  hft_orderbook_100percent_upgrade.md  phase1_implementation_plan.md  phase1_implementation_summary.md  phase2_implementation_summary.md  phase3_options.md  system_architecture_detailed.md
