[workspace]
resolver = "2"
members = [
    "crates/market-types",
    "crates/udp-protocol",
    "crates/feeder",
    "crates/matching-engine",
    "crates/feature-engineering",
    "crates/signal-generation",
    "crates/backtesting",
    "crates/oms",
    "crates/database",
    "crates/historical-loader",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# Core async runtime and networking
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Networking
bytes = "1.7"
socket2 = { version = "0.5", features = ["all"] }

# Data structures
dashmap = "6.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Math and statistics (Julia replacements)
ndarray = "0.16"
ndarray-stats = "0.6"
statrs = "0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Compression (for historical data)
flate2 = "1.0"
zstd = "0.13"

# Utilities
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
