[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true

[dependencies]
market-types = { path = "../market-types" }
anyhow = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
crc32fast = "1.4"
md-5 = "0.10"
serde_json = { workspace = true }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "fileapi"] }

[dev-dependencies]
tempfile = "3.8"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tracing-subscriber = "0.3"
