[package]
name = "udp-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
market-types = { path = "../market-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
